// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When report and report definition are empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report and report definition are given 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      >
        <option
          key="irr"
          value="irr"
        >
          IRR
        </option>
      </select>
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "block",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  >
    {
  "name": "irr",
  "displayName": "IRR",
  "type": "scatter",
  "data": {
    "datasets": [
      {
        "label": "IRR",
        "backgroundColor": "rgb(121, 127, 121)",
        "data": [
          {
            "x": 25373.196882982724,
            "y": 69.26999999999963
          },
          {
            "x": 28469.416882982725,
            "y": 68.91999999999996
          },
          {
            "x": 221904.55623732723,
            "y": 60.23000000000015
          },
          {
            "x": 482498.3552715056,
            "y": 58.820000000000036
          },
          {
            "x": 1573704.1506588343,
            "y": 55.04000000000019
          },
          {
            "x": 1950232.128700931,
            "y": 54.37000000000013
          },
          {
            "x": 2158455.9218533617,
            "y": 53.95000000000001
          },
          {
            "x": 2178230.5915344288,
            "y": 53.90000000000001
          }
        ],
        "fill": false,
        "propertyName": "irr"
      }
    ]
  },
  "options": {
    "legend": {
      "display": false
    },
    "elements": {
      "line": {
        "fill": false,
        "tension": 0
      }
    },
    "showLines": true,
    "responsive": true,
    "title": {
      "display": false
    },
    "scales": {
      "xAxes": [
        {
          "display": true,
          "labelString": "CAPEX",
          "ticks": {}
        }
      ],
      "yAxes": [
        {
          "display": true,
          "ticks": {
            "beginAtZero": false
          }
        }
      ]
    },
    "tooltips": {
      "callbacks": {}
    }
  }
}
  </pre>
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report definition is empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;

exports[`When report is empty 1`] = `
<div>
  <div
    className="row p-3"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      >
        <option
          key="irr"
          value="irr"
        >
          IRR
        </option>
      </select>
    </div>
  </div>
  <canvas
    style={
      Object {
        "display": "none",
      }
    }
  />
  <div
    className="alert alert-warning mt-3"
    style={
      Object {
        "display": "block",
      }
    }
  >
    Network analysis data not available. Run a new network analysis to see results.
  </div>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
  <button
    className="btn btn-primary pull-left"
    onClick={[Function]}
  >
    Reports
  </button>
  <Component />
</div>
`;
